# ‚úÖ Script: ProjectStatsUI.gd
@tool
extends Control

@export var exit_scene: bool = true

# === UI –≠–õ–ï–ú–ï–ù–¢–´ ===
@onready var label_folders: Label = $PS_PanelUI/VBoxContainer/FoldersLabel
@onready var label_files: Label = $PS_PanelUI/VBoxContainer/FilesLabel
@onready var label_lines: Label = $PS_PanelUI/VBoxContainer/LinesLabel
@onready var label_scenes: Label = $PS_PanelUI/VBoxContainer/ScenesLabel
@onready var label_size: Label = $PS_PanelUI/VBoxContainer/SizeLabel
@onready var countdown_label: Label = $LabelCountdown
@onready var label_exit_scene: Label = $LabelExitScene
# === –°–°–´–õ–ö–ê –ù–ê C# –°–ö–ê–ù–ï–† ===
var scanner: Node = null

func _ready():
	# –ï—Å–ª–∏ –≤—ã–∫–ª—é—á–µ–Ω–æ ‚Äî —Å–∫—Ä—ã–≤–∞–µ–º –ª–µ–π–±–ª –≤—ã—Ö–æ–¥–∞
	label_exit_scene.visible = exit_scene
	
	countdown_label.visible = false
	
	# –ò–Ω–∏—Ü–∏–∞–ª–∏–∑–∏—Ä—É–µ–º UI
	label_folders.text = "üìÅ Folders: ..."
	label_files.text = "üìÑ Files: ..."
	
	find_scanner()
	
	# –ü–æ–¥–∫–ª—é—á–∞–µ–º —Å–∏–≥–Ω–∞–ª –¢–û–õ–¨–ö–û –µ—Å–ª–∏ —Å–∫–∞–Ω–µ—Ä –Ω–∞–π–¥–µ–Ω
	if scanner:
		scanner.connect("ScanCompleted", Callable(self, "_on_scan_completed"))
		scanner.connect("LineCountCompleted", Callable(self, "_on_line_count_completed"))
		scanner.connect("SceneStatsCompleted", Callable(self, "_on_scene_stats_completed"))

	else:
		print("‚ùå –°–∫–∞–Ω–µ—Ä –Ω–µ –Ω–∞–π–¥–µ–Ω - —Å–∏–≥–Ω–∞–ª –Ω–µ –ø–æ–¥–∫–ª—é—á–µ–Ω")
		
func find_scanner():
	"""–ò—â–µ—Ç ProjectScanner –≤ –¥–µ—Ä–µ–≤–µ —Å—Ü–µ–Ω—ã"""
	scanner = get_tree().get_first_node_in_group("project_scanner")
		
# === –û–ë–†–ê–ë–û–¢–ß–ò–ö –°–ò–ì–ù–ê–õ–ê –û–¢ C# ===
func _on_scan_completed(folder_count: int, file_count: int):
	# –û–±–Ω–æ–≤–ª—è–µ–º –ª–µ–π–±–ª—ã
	label_folders.text = "üìÅ Folders in Project: %d" % folder_count
	label_files.text = "üìÑ Files in Project: %d" % file_count
	
func _on_line_count_completed(script_file_count: int, total_line_count: int):
	label_lines.text = "üßæ Scripts: %d , lines of code: %d" % [script_file_count, total_line_count]
	
func _on_scene_stats_completed(scene_count: int, project_size_bytes: int):
	label_scenes.text = "üé¨ Scenes in Project: %d" % scene_count
	label_size.text = "üì¶ Project Size: %.2f MB" % (project_size_bytes / 1024.0 / 1024.0)
	
func _input(event):
	if not exit_scene:
		return  # üö´ –µ—Å–ª–∏ –≤—ã–∫–ª—é—á–µ–Ω–æ ‚Äî –∏–≥–Ω–æ—Ä–∏—Ä—É–µ–º ESC
		
	if event is InputEventKey and event.pressed and event.keycode == KEY_ESCAPE:
		start_exit()
		
func start_exit():
	if not exit_scene:
		return  # üö´ –∑–∞—â–∏—Ç–∞ –Ω–∞ –≤—Å—è–∫–∏–π —Å–ª—É—á–∞–π
	countdown_label.visible = true

	countdown_label.text = "3.."
	await get_tree().create_timer(1.0).timeout

	countdown_label.text = "2.."
	await get_tree().create_timer(1.0).timeout

	countdown_label.text = "Exit"
	await get_tree().create_timer(0.3).timeout
	get_tree().quit()
	
	


	
